[gd_scene load_steps=17 format=3 uid="uid://c2ouj8pbo2qgu"]

[ext_resource type="Script" path="res://enemies/enemy.gd" id="1_rwtnc"]
[ext_resource type="Script" path="res://common/hitboxes/hitbox.gd" id="2_jdwj6"]
[ext_resource type="Script" path="res://resources/attack_data.gd" id="3_4ycds"]
[ext_resource type="Script" path="res://common/hitboxes/hurtbox.gd" id="3_q1lim"]
[ext_resource type="Script" path="res://common/state_machine/state_machine.gd" id="4_hi5qp"]
[ext_resource type="Script" path="res://enemies/states/idle.gd" id="5_iqc5x"]
[ext_resource type="Script" path="res://enemies/states/fall.gd" id="6_malky"]
[ext_resource type="Script" path="res://enemies/states/hurt.gd" id="8_kv5f8"]
[ext_resource type="PackedScene" uid="uid://dxhprshvt0s8s" path="res://interface/health_bars/health_bar.tscn" id="9_6rhm2"]
[ext_resource type="Script" path="res://enemies/states/dead.gd" id="9_67cu2"]

[sub_resource type="Resource" id="Resource_xgl6i"]
script = ExtResource("3_4ycds")
knock_height = 150.0
knock_intensity = 50.0
critical_hit = false
applies_poison = false
regular_stagger = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i7jwp"]
size = Vector2(30, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tdtvm"]
size = Vector2(28, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gppxq"]
size = Vector2(48, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qjc6o"]
size = Vector2(342, 110)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yslpf"]
height = 24.0

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
collision_layer = 4
collision_mask = 3
platform_on_leave = 2
platform_floor_layers = 4278190081
script = ExtResource("1_rwtnc")

[node name="Sprite" type="Sprite2D" parent="."]

[node name="Hitbox" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 0
script = ExtResource("2_jdwj6")
damage_source = 4
attack_data = SubResource("Resource_xgl6i")

[node name="RegularAttack" type="CollisionShape2D" parent="Sprite/Hitbox"]
shape = SubResource("RectangleShape2D_i7jwp")
debug_color = Color(0.701961, 0, 0.00392157, 0.419608)

[node name="Hurtbox" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 0
script = ExtResource("3_q1lim")
takes_damage_from = 2

[node name="EnemyHurtbox" type="CollisionShape2D" parent="Sprite/Hurtbox"]
shape = SubResource("RectangleShape2D_tdtvm")
debug_color = Color(0, 0.701961, 0.0509804, 0.419608)

[node name="AttackRange" type="Area2D" parent="Sprite"]
collision_layer = 0
collision_mask = 2

[node name="Range" type="CollisionShape2D" parent="Sprite/AttackRange"]
position = Vector2(-10, 0)
shape = SubResource("RectangleShape2D_gppxq")
debug_color = Color(1, 0.309804, 0, 0.137255)

[node name="LootSpawner" type="Marker2D" parent="Sprite"]
position = Vector2(0, -14)

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Range" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, -43)
shape = SubResource("RectangleShape2D_qjc6o")
debug_color = Color(1, 1, 0, 0.176471)

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_yslpf")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="Animations" type="AnimationPlayer" parent="."]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("4_hi5qp")
starting_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("5_iqc5x")
state_machine_node = NodePath("..")
fall_node = NodePath("../Fall")
hurt_node = NodePath("../Hurt")
chase_node = NodePath("../Chase")

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("6_malky")
state_machine_node = NodePath("..")
idle_node = NodePath("../Idle")
hurt_node = NodePath("../Hurt")

[node name="Chase" type="Node" parent="StateMachine"]

[node name="Attack" type="Node" parent="StateMachine"]

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource("8_kv5f8")
idle_node = NodePath("../Idle")
chase_node = NodePath("../Chase")
dead_node = NodePath("../Dead")

[node name="Dead" type="Node" parent="StateMachine"]
script = ExtResource("9_67cu2")

[node name="HealthBar" parent="." instance=ExtResource("9_6rhm2")]
offset_left = -16.0
offset_top = -20.0
offset_right = -16.0
offset_bottom = -20.0

[node name="PoisonTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="took_damage" from="." to="StateMachine/Idle" method="_on_enemy_took_damage"]
[connection signal="took_damage" from="." to="StateMachine/Fall" method="_on_enemy_took_damage"]
[connection signal="hit" from="Sprite/Hurtbox" to="StateMachine/Hurt" method="_on_hurtbox_hit"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="got_poisoned" from="StateMachine/Hurt" to="." method="_on_got_poisoned"]
[connection signal="died" from="StateMachine/Dead" to="." method="_on_died"]
[connection signal="timeout" from="PoisonTimer" to="." method="_on_poison_timer_timeout"]
